{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 36,
  "lineage": "a376a169-e70f-d676-328c-9809dd1a060f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024efc2adc6a09ebd",
            "arn": "arn:aws:ec2:eu-west-1:983323131622:instance/i-00465c5b879929bf6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00465c5b879929bf6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "len_terra",
            "monitoring": false,
            "primary_network_interface_id": "eni-0cfa6dabc55876f17",
            "private_dns": "ip-10-1-0-254.eu-west-1.compute.internal",
            "private_ip": "10.1.0.254",
            "public_dns": "ec2-34-253-4-220.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.4.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 400,
                "volume_id": "vol-0b3690653e8bdb927",
                "volume_size": 8,
                "volume_type": "io1"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d315211a65e6ad5",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0630019868fd45859"
            ]
          },
          "dependencies": [
            "aws_security_group.len_sg",
            "aws_subnet.len_subnet_1",
            "aws_vpc.len_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "len_nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:983323131622:instance/i-08d103e4891ed3b16",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d103e4891ed3b16",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "len_terra",
            "monitoring": false,
            "primary_network_interface_id": "eni-00d36d4559d85939b",
            "private_dns": "ip-10-1-1-107.eu-west-1.compute.internal",
            "private_ip": "10.1.1.107",
            "public_dns": "ec2-52-30-132-18.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.30.132.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c8d26a72ada0dac5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc3cb88711a535cc",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0630019868fd45859"
            ]
          },
          "dependencies": [
            "aws_security_group.len_sg",
            "aws_subnet.len_subnet_2",
            "aws_vpc.len_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "len_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-067689bf94c325e8c",
            "owner_id": "983323131622",
            "vpc_id": "vpc-001f6f79fa76b1d50"
          },
          "dependencies": [
            "aws_vpc.len_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04ab031ab4a604f91",
            "owner_id": "983323131622",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067689bf94c325e8c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-001f6f79fa76b1d50"
          },
          "dependencies": [
            "aws_internet_gateway.len_igw",
            "aws_vpc.len_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de5342da86359c24",
            "route_table_id": "rtb-04ab031ab4a604f91",
            "subnet_id": "subnet-00d315211a65e6ad5"
          },
          "dependencies": [
            "aws_internet_gateway.len_igw",
            "aws_route_table.rtb",
            "aws_subnet.len_subnet_1",
            "aws_vpc.len_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad3fdbff2527ddfe",
            "route_table_id": "rtb-04ab031ab4a604f91",
            "subnet_id": "subnet-0dc3cb88711a535cc"
          },
          "dependencies": [
            "aws_internet_gateway.len_igw",
            "aws_route_table.rtb",
            "aws_subnet.len_subnet_2",
            "aws_vpc.len_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "len_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:983323131622:security-group/sg-0630019868fd45859",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0630019868fd45859",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "len_sg",
            "name_prefix": null,
            "owner_id": "983323131622",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-001f6f79fa76b1d50"
          },
          "dependencies": [
            "aws_vpc.len_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "len_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:983323131622:subnet/subnet-00d315211a65e6ad5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-00d315211a65e6ad5",
            "map_public_ip_on_launch": true,
            "owner_id": "983323131622",
            "vpc_id": "vpc-001f6f79fa76b1d50"
          },
          "dependencies": [
            "aws_vpc.len_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "len_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:983323131622:subnet/subnet-0dc3cb88711a535cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0dc3cb88711a535cc",
            "map_public_ip_on_launch": true,
            "owner_id": "983323131622",
            "vpc_id": "vpc-001f6f79fa76b1d50"
          },
          "dependencies": [
            "aws_vpc.len_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "len_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:983323131622:vpc/vpc-001f6f79fa76b1d50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05cd13bac76c9a344",
            "default_route_table_id": "rtb-0b6eb23a32a0023db",
            "default_security_group_id": "sg-0c5148db8538d750d",
            "dhcp_options_id": "dopt-c7623ba1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-001f6f79fa76b1d50",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b6eb23a32a0023db",
            "owner_id": "983323131622"
          }
        }
      ]
    }
  ]
}